3-diagnosability/apps-istio-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apps-virtual-service
spec:
  hosts:
  - "demo-app.demo"
  gateways:
  - apps-istio-gateway
  http:
  - route:
    - destination:
        host: gateway
        port:
          number: 8080
